<resources>
    <string name="app_name">Vsync</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="message">Message</string>
     <string name="Password">Enter Password</string>
    <string name="SignUp">Sign Up!</string>
    <string name="LogIn">LogIn</string>
    <string name="Username">Enter Username</string>
    <string name="LogOut">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="Contacts">View Contacts!</string>
    <string name="Disconnect">Block</string>
    <string name="Sync">Request Sync</string>
    <string name="start_slot">Slot Start</string>
    <string name="end_slot">Slot End</string>
    <string name="date">Date</string>
    <string name="dateform">dd/mm/yyyy</string>
    <string name="Notifications">Notifications!!</string>
    <string name="Requests">Requests!</string>
    <string name="title_activity_sync">SyncActivity</string>
    <string name="title_activity_view_requests">ViewRequests</string>
    <string name="AddContact">Add Contact</string>
    <string name="ViewTT">My Time-Table!!</string>
    <string name="EditTT">Edit Time-Table!</string>
    <string name="title_activity_add_contacts">AddContacts</string>
    <string name="title_activity_view_tt">ViewTTActivity</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_view_contacts">ViewContacts</string>
    <string name="title_activity_list">LIST</string>
    <string name="edit_activity">Edit Activity</string>
    <string name="vSync">Vsync!</string>
    <string name="title_activity_editlist">Editlist</string>
    <string name="title_activity_extra">extra</string>
    <string name="title_activity_more">more</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_nav_bar">nav_bar</string>

    <string name="title_section1">My TimeTable</string>
    <string name="title_section2">My Contacts</string>
    <string name="title_section3">Requests</string>
    <string name="title_section4">Notifications</string>
    <string name="title_section5">LogOut</string>
    <string name="sendRequest">Send Request</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_welcome2">welcome2</string>
    <string name="title_activity_spinner_">spinner_Act</string>
    <string name="country_label">Request to Sync </string>
    <string name="enter_User">Pick an user  : </string>
    <string name="enter_time">Pick a time slot (IST) : </string>
    <string-array name="contacts_list">

    <item>Anusha</item>
    <item>Pawan</item>
    <item>Neha</item>
    <item>Keerthana</item>
    <item>Amit</item>
    <item>Shravya</item>
    <item>Tom</item>
    <item>Chile</item>
    <item>Saud</item>
    <item>Nepa</item>
</string-array>



    <string-array name="time_list">
        <item>10:00 AM to 11:00 AM </item>
        <item>12:30 PM to 1:00  PM</item>
        <item>1:00  PM to 2:00  PM</item>
        <item>4:00  PM to 6:00  PM</item>
        <item>5:00  PM to 6:00  PM</item>
        <item>6:00  PM to 7:00  PM</item>
        <item>7:30  PM to 8:00  PM</item>
        <item>10:00 PM to 11:00 PM</item>
        <item>11:00 PM to 11:30 PM</item>
        <item>10:00 AM to 11:00 AM</item>
    </string-array>


    <string name="lblAcc">Select User</string>
    <string name="lblSubAcc">Select Time Slot (IST)</string>

    <string-array name="acc_type">
        <item>Anusha</item>
        <item>Pawan</item>
        <item>Neha</item>
        <item>Keerthana</item>
        <item>Amit</item>
        <item>Shravya</item>
        <item>Tom</item>
        <item>Chile</item>
        <item>Saud</item>
        <item>Nepa</item>
    </string-array>
</resources>
